# libprv_nRF5

./: .gitattributes  .gitignore  .gitmodules  compare_sdk_config.sh  readme.md  set_RTT_location.jlinkscript
cmake/: arm.toolchain.cmake  boilerplate.cmake  compile_targets_nRF52840.cmake  magic.cmake  pca10056_sdk_functions.cmake  project_config.cmake  show_compiler_flags.cmake
config/: gcc_nrf52.ld  gcc_nrf52_spim3.ld  gcc_nrf52_spim3_debug.ld  gcc_s140_nrf52.ld  gcc_s140_nrf52_debug.ld  gcc_s140_nrf52_spim3.ld  gcc_s140_nrf52_spim3_debug.ld  libprv_nRF5_config.h  sdk_config.h
src/: crc8.c  crc8.h  prv_debouncer.c  prv_debouncer.h  prv_power_manager.c  prv_power_manager.h  prv_serial_parser.h  prv_temperature.c  prv_temperature.h  prv_timers.c  prv_timers.h  prv_utils.c  prv_utils.h
tests/cmake/: magic.cmake  project_config.cmake
usb_serial_to_spi/: CMakeLists.txt
usb_serial_to_spi/config/: app_config.h  sdk_config.h
usb_serial_to_spi/src/: main.c
